# Kamisado

./: CMakeLists.txt  README.md
inc/: KamisadoGame.h  KamisadoStructs.h  TerminalDisplay.h
src/: KamisadoGame.cpp  TerminalDisplay.cpp  main.cpp
